fix(scss-fill-available): replace with stretch due to spec change

--- a/src/assets/stylesheets/ThemeToggle.scss
+++ b/src/assets/stylesheets/ThemeToggle.scss
@@ -40,7 +40,7 @@
       &--text {
         display: block;
         padding: $space-0-5;
-        width: -webkit-fill-available;
+        width: -webkit-stretch;
         font-weight: $font-weight-bold;
       }
 
